[package]
name = "atomicparsley-sys"
version = "0.1.0"
authors = ["Nathan Henrie <nate@n8henrie.com>"]
readme = "README.md"
license = "MIT AND GPLv2"
edition = "2021"
links = "atomicparsley"
repository = "https://github.com/n8henrie/atomicparsley-sys"
description = "Rust bindings for atomicparsley"

[dependencies]

[build-dependencies]
chrono = "0.4"
bindgen = "0.59"
cc = { version = "1.0", features = ["parallel"] }
git2 = "0.13"
